[metadata]
name = SCRAM
author = Evan Callicoat
author-email = apsu@propter.net
url = http://github.com/Apsu/SCRAM
summary = Simple Cluster Resource Availability Manager
description-file = README.md
license = GPL-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: Docker
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: GNU Public License
        Operating System :: Linux
        Programming Language :: Python

[files]
packages =
    scram

[entry_points]
console_scripts =
    scram = scram:main
