[metadata]
name = Scrambler
author = Evan Callicoat
author-email = apsu@propter.net
url = http://github.com/Apsu/scrambler
summary = Decentralized Docker cluster manager
description-file = README.md
license = GPL-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: Docker
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: GNU Public License
        Operating System :: Linux
        Programming Language :: Python

[files]
data_files =
    etc/scrambler.json =
        etc/scrambler.json

packages =
    scrambler

[entry_points]
console_scripts =
    scramble = scrambler:main
